--- a/Likes_Counter_Program.ipynb
+++ b/Likes_Counter_Program.ipynb
@@ -1,35 +1,64 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "bjYf-b-ZklIv"
+   },
+   "outputs": [],
+   "source": [
+    "blog_posts = [{'Photos': 3, 'Likes': 21, 'Comments': 2}, \n",
+    "              {'Likes': 13, 'Comments': 2, 'Shares': 1}, \n",
+    "              {'Photos': 5, 'Likes': 33, 'Comments': 8, 'Shares': 3}, \n",
+    "              {'Comments': 4, 'Shares': 2}, \n",
+    "              {'Photos': 8, 'Comments': 1, 'Shares': 1}, \n",
+    "              {'Photos': 3, 'Likes': 19, 'Comments': 3}]"
+   ]
   },
-  "cells": [
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "bjYf-b-ZklIv"
-      },
-      "outputs": [],
-      "source": [
-        "blog_posts = [{'Photos': 3, 'Likes': 21, 'Comments': 2}, \n",
-        "              {'Likes': 13, 'Comments': 2, 'Shares': 1}, \n",
-        "              {'Photos': 5, 'Likes': 33, 'Comments': 8, 'Shares': 3}, \n",
-        "              {'Comments': 4, 'Shares': 2}, \n",
-        "              {'Photos': 8, 'Comments': 1, 'Shares': 1}, \n",
-        "              {'Photos': 3, 'Likes': 19, 'Comments': 3}]"
-      ]
-    }
-  ]
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ini adalah fitur baru yang akan ditambahkan\n",
+    "\n",
+    "total_likes = 0\n",
+    "try :\n",
+    "    for post in blog_posts:\n",
+    "        if 'Likes' not in post.keys():\n",
+    "            post['Likes'] = 0\n",
+    "            total_likes = total_likes + post['Likes']\n",
+    "except:\n",
+    "    pass\n",
+    "print(total_likes)"
+   ]
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "collapsed_sections": [],
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 1
 }
